# MagicGame

./: Cargo.toml  build.rs
core/: Cargo.toml
core/src/: lib.rs  main.rs
core/src/game/: game.rs
core/src/physics/: physics.rs
core/src/resources/: resources.rs
core/src/shaders/: shaders.rs  standard.frag
core/src/util/: random.rs
core/src/world/: chunk.rs  mod.rs  pixel.rs  world.rs
core/src/world/generation/: generator.rs
macros/: Cargo.toml
macros/src/: lib.rs
renderer/: Cargo.toml
renderer/src/: display.rs  input.rs  lib.rs  mesh.rs  util.rs  window.rs
resources/game/: pixels.json  test.json
src/: main.rs
