[package]
name = "magic_game"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[[bin]]
name = "magic_game"
path = "src/main.rs"

[workspace]
members = [
    "renderer",
    "core"
]

[dependencies]
core = { version = "0.1.0", path = "core"}
renderer = { version = "0.1.0", path = "renderer"}
anyhow = "1.0.66"